# fiducia-lambda-service.rs

./: .cli-flags.toml  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  compose.yaml  package-lock.json  package.json
.cargo/: audit.toml
.github/: README.md
.github/workflows/: README.md  ci.yml  cli-flags.yml
child-runtimes/: README.md  browser-function-runner.mjs  js-function-runner.mjs
scripts/: with-flags2env.sh
src/: README.md  api_docs.rs  child_runner.rs  config.rs  coord.rs  definition.rs  http.rs  lib.rs  main.rs  messaging.rs  metrics.rs  nats.rs  runtime.rs  util.rs
src/workflow/: README.md  engine.rs  mod.rs  store.rs
tests/: README.md  browser-runtimes.test.mjs
